# pytorch_grouped_gemm

./: .gitmodules  CMakeLists.txt  README.md  test.py
csrc/: main.cu  torch_grouped_gemm.cu
